--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": ".",
+  "homepage": "https://juan-manuel-leal.github.io/curso-react",
   "devDependencies": {
     "gh-pages": "^5.0.0"
   }
